program-single page

--- a/app/scss/blocks/_all.scss
+++ b/app/scss/blocks/_all.scss
@@ -5,7 +5,7 @@
 @import "b-related";
 @import "b-youtubers";
 @import "b-download";
-@import "b-article-content";
+@import "b-article";
 
 // Sliders
 @import "b-slider/b-slider--video";
