--- a/app/scss/blocks/_b-download.scss
+++ b/app/scss/blocks/_b-download.scss
@@ -14,6 +14,9 @@
     @include breakpoint(tablet) {
       padding: 0 12%;
     }
+    @include breakpoint(desktop) {
+      padding: 0 6.2%;
+    }
   }
   &__item {
     font-size: 2.4rem;
