update fondation page

--- a/app/scss/pages/_p-fondation.scss
+++ b/app/scss/pages/_p-fondation.scss
@@ -166,12 +166,13 @@
         position: relative;
         &:before {
           content: '';
-          width: .3rem;
-          height: .3rem;
+          width: .5rem;
+          height: .5rem;
           background-color: colorFunc(fondation, committee-helper);
           display: inline-block;
           vertical-align: middle;
           margin-right: .4rem;
+          @include vendor-prefixes(border-radius, 50%);
         }
       }
     }
