--- a/app/scss/blocks/_b-article.scss
+++ b/app/scss/blocks/_b-article.scss
@@ -54,14 +54,52 @@
     @include breakpoint(overPhone) {
       margin-bottom: 4.25rem;
     }
+    figure {
+      padding-bottom: 56.25%;
+      position: relative;
+      height: 0;
+      overflow: hidden;
 
-    iframe {
-      margin: 0 auto;
-      display: block;
-      @include breakpoint(phone) {
-        width: 1px;
-        min-width: 100%;
+     iframe {
+       position: absolute;
+       top:0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       z-index: 2;
+     }
+    }
+    &--patchwork {
+      width: 49.5%;
+      float: left;
+      &:first-child {
+        margin-right: 1%;
       }
+      // iframe {
+      //   width: 100%;
+      //   @include breakpoint(toDesktop) {
+      //     height: auto;
+      //   }
+      // }
+    }
+    &--single {
+      // iframe {
+      //   margin: 0 auto;
+      //   display: block;
+      //   width: auto;
+      //   @include breakpoint(phone) {
+      //     width: 1px;
+      //     min-width: 100%;
+      //   }
+      // }
+    }
+    &__title {
+      font-weight: $font-weight-bold;
+      @include font-size(14px, 17px, 27px);
+      @include line-height(19px, 23px, 33px);
+      text-align: center;
+      padding: 0 6%;
+      margin-top: 2rem;
     }
   }
 
