--- a/app/scss/blocks/_b-article.scss
+++ b/app/scss/blocks/_b-article.scss
@@ -73,6 +73,7 @@
       font-weight: $font-weight-bold;
       @include font-size(14px, 17px, 27px);
       @include line-height(19px, 23px, 33px);
+      display: block;
       text-align: center;
       padding: 0 6%;
       margin-top: 2rem;
