--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -181,7 +181,9 @@ $colors                : (
   ),
   // Program Single
   program-single       : ( //----- program single colors
-    key-text           : #fff
+    key-text           : #fff,
+    key-border-egalite : #95b4ee,
+    key-border-cohesion: #f7b9cc
   ),
   // Press
   press                : ( //----- press page colors
