--- a/app/scss/pages/_p-program-single.scss
+++ b/app/scss/pages/_p-program-single.scss
@@ -78,16 +78,12 @@
       @include font-size(71px, 71px, 121.8px);
       @include line-height(59px, 59px, 101px);
       letter-spacing: -.5rem;
-      margin-left: -0.5rem;
       @include breakpoint(phone) {
         text-align: center;
         padding-bottom: 7rem;
       }
-      @include breakpoint(tablet) {
+      @include breakpoint(overPhone) {
         padding-bottom: 4.5rem;
-      }
-      @include breakpoint(desktop) {
-        padding-bottom: 10rem;
       }
       span {
         @include font-size(125px, 125px, 214.5px);
@@ -96,7 +92,7 @@
       }
     }
     &__block {
-      border-top: 1px solid colorFunc(program-single, key-text);
+      border-top: 1px solid;
       padding: 6.5rem 0;
       @include breakpoint(overPhone) {
         padding: 4rem 0;
@@ -108,7 +104,10 @@
       @include font-size(14px, 20px, 35px);
       @include line-height(19px, 30px, 60px);
       color: colorFunc(program-single, key-text);
-      margin-bottom: 0;
+      margin-bottom: .8rem;
+      &:last-child {
+        margin-bottom: 0;
+      }
       strong {
         @include font-size(40px, 38px, 60px);
         @include line-height(43px, 45px, 70px);
@@ -136,5 +135,8 @@
       padding-right: 34%;
       width: 92%;
     }
+  }
+  .b-related__title {
+    @include font-size(50px, 31px, 36px);
   }
 }
