--- a/app/scss/blocks/_all.scss
+++ b/app/scss/blocks/_all.scss
@@ -6,6 +6,7 @@
 @import "b-youtubers";
 @import "b-download";
 @import "b-article";
+@import "b-program-related";
 
 // Sliders
 @import "b-slider/b-slider--video";
