--- a/app/scss/blocks/_b-article.scss
+++ b/app/scss/blocks/_b-article.scss
@@ -3,6 +3,22 @@
 .b-article {
   position: relative;
 
+  &__head {
+    text-align: center;
+  }
+  &__date {
+    font-family: $font-family-quinary;
+    @include font-size(24px, 18px, 28px);
+    @include breakpoint(phone) {
+      margin-bottom: 1.5rem;
+    }
+    @include breakpoint(tablet) {
+      margin-bottom: 2.7rem;
+    }
+    @include breakpoint(desktop) {
+      margin-bottom: 4.3rem;
+    }
+  }
   &__title {
     text-align: center;
     color: colorFunc(h1, primary);
@@ -12,6 +28,11 @@
     }
     @include breakpoint(desktop) {
       margin-bottom: 3.8rem;
+    }
+  }
+  h1 {
+    @include breakpoint(desktop) {
+      line-height: 6.5rem;
     }
   }
   &__intro {
