--- a/app/scss/pages/_all.scss
+++ b/app/scss/pages/_all.scss
@@ -1,6 +1,7 @@
 //----- Pages
 @import "p-search";
 @import "p-404";
+@import "p-static";
 @import "p-news";
 @import "p-article";
 @import "p-partner";
