--- a/app/scss/helpers/svg-icons/variables.scss
+++ b/app/scss/helpers/svg-icons/variables.scss
@@ -1,5 +1,7 @@
 $icomoon-font-path: $icomoon-font-path !default;
 
+$icon--pdf: "\e90a";
+$icon--yt-play: "\e90b";
 $icon--arrow-dot: "\e900";
 $icon--arrow-download: "\e901";
 $icon--arrow-left: "\e902";
@@ -17,3 +19,5 @@ $icon--twitter: "\e914";
 $icon--video-play: "\e915";
 $icon--whatsapp: "\e916";
 $icon--youtube: "\e919";
+$icon--file: "\e90c";
+$icon--youtube-play: "\e909";
