--- a/app/scss/components/_c-pagination.scss
+++ b/app/scss/components/_c-pagination.scss
@@ -122,6 +122,7 @@
   }
   &__item {
     display: inline-block;
+    text-transform: lowercase;
 
     &.current {
       border-bottom: 1px solid;
