--- a/app/scss/components/_c-newsletter.scss
+++ b/app/scss/components/_c-newsletter.scss
@@ -38,4 +38,44 @@
     vertical-align: middle;
     margin-left: 2.2%;
   }
+
+  // Error style
+  &.error {
+    @include vendor-prefixes(transition, all .3s);
+    .c-newsletter__input {
+      position: relative;
+      z-index: z(min) + 2;
+      background-color: colorFunc(c-newsletter, input-c);
+      @include placeholder {
+        color: colorFunc(helpers, error);
+      }
+    }
+    .c-newsletter__icon {
+      position: relative;
+      z-index: z(min) + 2;
+      color: colorFunc(helpers, error);
+    }
+
+    &:after {
+      content: '';
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: z(min) + 1;
+      background-color: transparentize(black, .5);
+    }
+  }
+
+  // Sucess style
+  &.success {
+    .c-newsletter__input {
+      background-color: colorFunc(c-newsletter, input-c);
+      color: colorFunc(helpers, success);
+    }
+    .c-newsletter__icon {
+      color: colorFunc(helpers, success);
+    }
+  }
 }
