--- a/app/scss/pages/_p-fondation.scss
+++ b/app/scss/pages/_p-fondation.scss
@@ -166,7 +166,7 @@
         margin-bottom: 2.1rem;
       }
 
-      &__helper {
+      strong {
         text-transform: uppercase;
         color: colorFunc(fondation, committee-helper);
         font-weight: $font-weight-bold;
