--- a/app/scss/pages/_p-press.scss
+++ b/app/scss/pages/_p-press.scss
@@ -130,6 +130,7 @@
     }
     &__date {
       font-family: $font-family-quinary;
+      font-style: italic;
       @include font-size(18px, 18px, 25px);
       margin-bottom: 2.5rem;
       @include breakpoint(overPhone) {
